--- a/en/index.html
+++ b/en/index.html
@@ -57,7 +57,7 @@
        <h2>Code</h2>
        <i class="devicon-javascript-plain colored"></i>
        <i class="devicon-python-plain colored"></i>
-       <p>Python and JavaScript for data analisys and web programming.</p>
+       <p>Python and JavaScript for data analysis and web programming.</p>
      </div>
      <div class="tech">
        <h2>Tools</h2>
