--- a/en/index.html
+++ b/en/index.html
@@ -104,7 +104,7 @@
     <h3> Puppybot </h3>
 
     <p> Puppybot is a Twitter bot that retweets images of puppies! It can filter ugly images (like pictures of cats, for instance) using TensorFlow. It was developed using Python.</p>
-    <a class="project-link" href="https://twitter.com/apuppybot/">Pet kk</a>
+    <a class="project-link" href="https://twitter.com/apuppybot/">Pet me!</a>
   </div>
 </div>
 
