--- a/en/index.html
+++ b/en/index.html
@@ -98,7 +98,7 @@
 
 <div class="user-projects">
   <div class="images-right">
-    <img alt="puppy robot" src="/assets/img/qqsHzgqR_400x400.jpg" />
+    <img alt="puppy robot" src="/assets/img/puppy.jpg" />
   </div>
   <div class="contents">
     <h3> Puppybot </h3>
