--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
 
 
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="assets/js/sweet-scroll.min.js"></script>
-<script src="assets/js/main.js"></script>
-<script src="assets/js/lang.js"></script>
-<script src="assets/js/selector.js"></script>
+<script src="assets/js/sweet-scroll.min.js" type="text/javascript"></script>
+<script src="assets/js/main.js" type="text/javascript"></script>
+<script src="assets/js/lang.js" type="text/javascript"></script>
+<script src="assets/js/selector.js" type="text/javascript"></script>
 
 
 
