small visual changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <!-- Links -->
         <div class="header-links">
-          <a class="link" style="cursor: pointer;" rel="alternate" onclick="Lang('pt')" hreflang="pt" id="ptSelector"><u>Português</u></a> /
+          <a class="link" style="cursor: pointer;" rel="alternate" onclick="Lang('pt')" hreflang="pt" id="ptSelector"><u>Português</u></a> &bull;
           <a class="link" style="cursor: pointer;" rel="alternate" onclick="Lang('en')" hreflang="en" id="enSelector">English</a>
         </div>
       </div>
