--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <!-- project: image on the right text on the left -->
       <div class="user-projects" type="web">
         <div class="images-right">
-          <img alt="tube plotter" src="assets/img/ytd.jpg" />
+          <img alt="tube plotter" src="assets/img/plotter.jpg" />
         </div>
         <div class="contents">
           <!-- Project Name -->
