atualização do tube plotter

--- a/index.html
+++ b/index.html
@@ -111,11 +111,13 @@
           <!-- Project Name -->
           <h3> Tube Plotter </h3>
           <!-- Descriptions -->
-          <p lang="pt">Uma simples aplicação que plota thumbnails do YouTube em um grafo extraído do video network do YouTube Data Tools e espacializado no Gephi. Permite navegar pelo grafo usando as thumbnails de cada vídeo como nó.</p>
-          <p lang="en" style="display:none;">A simple web application that plots YouTube thumbnails on a graph extracted from YouTube Data Tools Video Network module and spacialized on Gephi. Allows you to visualize the graph with the thumbnails for nodes.</p>
+          <p lang="pt">Uma simples aplicação que plota thumbnails do YouTube em um grafo extraído do video network do YouTube Data Tools e espacializado no Gephi. Permite navegar pelo grafo usando as thumbnails de cada vídeo como nó. A versão CLI também permite fazer o download das thumbnails.</p>
+          <p lang="en" style="display:none;">A simple web application that plots YouTube thumbnails on a graph extracted from YouTube Data Tools Video Network module and spacialized on Gephi. Allows you to visualize the graph with the thumbnails for nodes. The CLI version also allows downloading the thumbnails.</p>
           <!-- links -->
           <a lang="pt" class="project-link" href="https://tube-plotter.herokuapp.com/">Visitar</a>
+          <a lang="pt" class="project-link" href="https://github.com/danielfeloiola/tube_plotter_cli">Versão CLI</a>
           <a lang="en" style="display:none;"class="project-link" href="https://tube-plotter.herokuapp.com/">Check it out</a>
+          <a lang="en" style="display:none;"class="project-link" href="https://github.com/danielfeloiola/tube_plotter_cli">CLI Version</a>
         </div>
       </div>
 
