adicionando a imagem do scraper

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <!-- project: image on the right text on the left -->
       <div class="user-projects" type="web">
         <div class="images-right">
-          <img alt="youtube-data" src="assets/img/ytd.jpg" />
+          <img alt="youtube-data" src="assets/img/cli.png" />
         </div>
         <div class="contents">
           <!-- Project Name -->
