added the dataviz section and bugfix

--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
 
       <!-- Selector -->
       <div lang="pt" style="color:#000;text-decoration:none;font-size:25px;margin:10px;text-align: center;" >
-        <a class="link" style="color:#999;cursor: pointer;" onclick="pSelect('dataviz')" id="datavizSelector"><span>dataviz</span></a> &bull;
+        <!--<a class="link" style="color:#999;cursor: pointer;" onclick="pSelect-('dataviz')" id="datavizSelector"><span>dataviz</span></a> &bull; -->
+        <a class="link" style="cursor: pointer;" onclick="pSelect('dataviz')" id="datavizSelector"><span>dataviz</span></a> &bull;
         <a class="link" style="cursor: pointer;" onclick="pSelect('web')" id="webSelector"><u><span>web</span></u></a> &bull;
         <a class="link" style="cursor: pointer;" onclick="pSelect('other')" id="otherSelector"><span>outros</span></a>
       </div>
       <div lang="en" style="display:none;color:#000;text-decoration:none;font-size:25px;margin:10px;text-align: center;" >
-        <a class="link" style="color:#999;cursor: pointer;" onclick="pSelect('dataviz')" id="datavizSelectorEn"><span>dataviz</span></a> &bull;
+        <!-- <a class="link" style="color:#999;cursor: pointer;" onclick="pSelect-('dataviz')" id="datavizSelectorEn"><span>dataviz</span></a> &bull;-->
+        <a class="link" style="cursor: pointer;" onclick="pSelect('dataviz')" id="datavizSelectorEn"><span>dataviz</span></a> &bull;
         <a class="link" style="cursor: pointer;" onclick="pSelect('web')" id="webSelectorEn"><u><span>web</span></u></a> &bull;
         <a class="link" style="cursor: pointer;" onclick="pSelect('other')" id="otherSelectorEn"><span>others</span></a>
       </div>
