new image on the dataviz post

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <!-- project: image on the right text on the left -->
       <div class="user-projects" type="dataviz" style="display:none;">
         <div class="images-right">
-          <img alt="tube plotter" src="assets/img/plotter.png" />
+          <img alt="tube plotter" src="assets/img/vaporwave.png" />
         </div>
         <div class="contents">
           <!-- Project Name -->
