added book and flackr

--- a/index.html
+++ b/index.html
@@ -247,6 +247,38 @@
          </div>
        </div>
 
+       <!-- project: image on the left text on the right -->
+       <div class="user-projects" type="others" style="display:none;">
+        <div class="images-right">
+          <img alt="pinocchos pizza" src="assets/img/flackr.jpeg" /> <!-- FLACKR -->
+        </div>
+        <div class="contents">
+          <!-- Project Name -->
+          <h3> Flackr </h3>
+          <!-- Descriptions -->
+          <p lang="pt">Um site para troca de mensagens instantâneas inspirado no Slack. Feito utilizando Flask e Socket.IO</p>
+          <p lang="en" style="display:none;">A Slack-inspired instant messaging site. Made using Flask and Socket.IO.</p>
+          <!-- Links -->
+          <a lang="pt" class="project-link" href="https://flackr.herokuapp.com/">Testar</a>
+          <a lang="en" style="display:none;"class="project-link" href="https://flackr.herokuapp.com/">Test</a>
+        </div>
+      </div>
+
+      <!-- project: image on the left text on the right -->
+      <div class="user-projects" type="others" style="display:none;">
+        <div class="images-left">
+          <img alt="book book" src="assets/img/book.jpeg" />
+        </div>
+        <div class="contents-right">
+          <!-- Project Name -->
+          <h3> Book Book </h3>
+          <!-- Descriptions -->
+          <p lang="pt">Um aplicativo web simples para avaliar os livros que você gosta. Criado com Python, Flask e PostgreSQL.</p>
+          <p lang="en" style="display:none;">A simple web app to review the books that you like. Built using Python, Flask and PostgreSQL.</p>
+          <!-- Links -->
+          <a lang="pt" class="project-link" href="https://fast-mountain-47414.herokuapp.com/">Visitar</a>
+          <a lang="en" style="display:none;" class="project-link" href="https://fast-mountain-47414.herokuapp.com/">Visit</a>
+
     </section>
 
 
