Nova descrição de alguns projetos

--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
           <!-- Project Name -->
           <h3> Flackr </h3>
           <!-- Descriptions -->
-          <p lang="pt">Um site para troca de mensagens instantâneas inspirado no Slack. Feito utilizando Flask e Socket.IO</p>
-          <p lang="en" style="display:none;">A Slack-inspired instant messaging site. Made using Flask and Socket.IO.</p>
+          <p lang="pt">Um site para troca de mensagens instantâneas inspirado no Slack. Programado com Python no backend e JavaScript (ES6) no frontend, utilizando o framework Flask e Socket.IO para a troca de mensagens</p>
+          <p lang="en" style="display:none;">A Slack-inspired instant messaging site. Programmed with Python on the backend and JavaScript (ES6) on the frontend, and built using the Flask framework and Socket.IO for sending messages.</p>
           <!-- Links -->
           <a lang="pt" class="project-link" href="https://flackr.herokuapp.com/">Testar</a>
           <a lang="en" style="display:none;"class="project-link" href="https://flackr.herokuapp.com/">Test</a>
