--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
           <p lang="pt">Uma simples aplicação que plota thumbnails do YouTube em um grafo extraído do video network do YouTube Data Tools e espacializado no Gephi. Permite navegar pelo grafo usando as thumbnails de cada vídeo como nó. A versão CLI também permite fazer o download das thumbnails.</p>
           <p lang="en" style="display:none;">A simple web application that plots YouTube thumbnails on a graph extracted from YouTube Data Tools Video Network module and spacialized on Gephi. Allows you to visualize the graph with the thumbnails for nodes. The CLI version also allows downloading the thumbnails.</p>
           <!-- links -->
-          <a lang="pt" class="project-link" href="https://tube-plotter.herokuapp.com/">Visitar</a>
+          <a lang="pt" class="project-link" href="https://tube-plotter.up.railway.app/">Visitar</a>
           <a lang="pt" class="project-link" href="https://github.com/danielfeloiola/tube_plotter_cli">Versão CLI</a>
-          <a lang="en" style="display:none;"class="project-link" href="https://tube-plotter.herokuapp.com/">Check it out</a>
+          <a lang="en" style="display:none;"class="project-link" href="https://tube-plotter.up.railway.app/">Check it out</a>
           <a lang="en" style="display:none;"class="project-link" href="https://github.com/danielfeloiola/tube_plotter_cli">CLI Version</a>
         </div>
       </div>
@@ -137,7 +137,7 @@
           <p lang="pt">TwitData é um simples aplicativo web que geolocaliza tweets em um mapa - permitindo buscas por usuário, hashtag ou trending topic. É uma maneira rápida de descobrir sobre o que estão falando em algum lugar, ou onde estão falando de algo.</p>
           <p lang="en" style="display:none;">TwitData is a simple web application that geolocates tweets on a map - wether you search by user, hashtag or trending topics. It’s a simple and fast way to find out what user are talking about somewhere - or where they are talking about something.</p>
           <!-- links -->
-          <a lang="pt" class="project-link" href="https://twit-data.herokuapp.com/">Visitar</a>
+          <a lang="pt" class="project-link" href="twit-data-production.up.railway.app">Visitar</a>
           <a lang="en" style="display:none;"class="project-link" href="https://twit-data.herokuapp.com/">Check it out</a>
         </div>
       </div>
@@ -154,8 +154,8 @@
           <p lang="pt">O YouTube Data é uma ferramenta web que faz simples coletas e visualizações de dados atravéas da API do YouTube, mostrando os videos mais recomendados para um tópico específico. Também possui uma função de análise de redes sem a necessidade de baixar os dados.</p>
           <p lang="en" style="display:none;">YouTube Data is a web application to make simple data collections as visualizations via the YouTube API, showing what videos are more recommended for a specific search query. It also has a networks analisys function that don't require downloading the data.</p>
           <!-- links -->
-          <a lang="pt" class="project-link" href="https://ytd-cloud.herokuapp.com/">Visitar</a>
-          <a lang="en" style="display:none;"class="project-link" href="https://youtubedataapp.herokuapp.com/">Check it out</a>
+          <a lang="pt" class="project-link" href="hhttps://j6gabe.deta.dev/">Visitar</a>
+          <a lang="en" style="display:none;"class="project-link" href="https://j6gabe.deta.dev/">Check it out</a>
         </div>
       </div>
 
@@ -171,15 +171,15 @@
           <p lang="pt">Uma simples ferramenta que permite encontrar rapidamente um tweet usando apenas o nome do usuário e o id do tweet. Pode ser usado para visualizar conteúdo coletados através de ferramentas como o DMI-TCAT ou TAGS.</p>
           <p lang="en" style="display:none;">A simple tool that allows the user to quickly find a tweet using only the username and the tweet id. Can be used to visualize content (like images and videos) collected through tools like TAGS or TCAT.</p>
           <!-- links -->
-          <a lang="pt" class="project-link" href="https://twit-viewer.herokuapp.com/">Visitar</a>
-          <a lang="en" style="display:none;"class="project-link" href="https://twit-viewer.herokuapp.com/">Check it out</a>
+          <a lang="pt" class="project-link" href="https://b8tp31.deta.dev/">Visitar</a>
+          <a lang="en" style="display:none;"class="project-link" href="https://b8tp31.deta.dev/">Check it out</a>
         </div>
       </div>
 
       <!-- project: image on the right text on the left -->
       <div class="user-projects" type="web">
         <div class="images-right">
-          <img alt="youtube-data" src="assets/img/cli.png" />
+          <img alt="google-img-scraper" src="assets/img/cli.png" />
         </div>
         <div class="contents">
           <!-- Project Name -->
@@ -242,8 +242,8 @@
            <p lang="pt">Site para a Pinocchio’s Pizza, um restaurante italiano em Cambridge, MA. Conta com recursos de e-commerce como carrinho de compras, e também permite aos administradores fazer atualizações no menu via um painel. Criado com Python e Django.</p>
            <p lang="en" style="display:none;">Website for Pinocchio’s Pizza, an italian restaurant in Cambridge, MA. Has typical e-commerce features like shopping carts, and also allows the admins to make changes to the menu via a panel. Built using Python and Django.</p>
            <!-- Links -->
-           <a lang="pt" class="project-link" href="https://fast-mountain-47414.herokuapp.com/">Visitar</a>
-           <a lang="en" style="display:none;"class="project-link" href="https://fast-mountain-47414.herokuapp.com/">Yummy!</a>
+           <a lang="pt" class="project-link" href="pizza.up.railway.app">Visitar</a>
+           <a lang="en" style="display:none;"class="project-link" href="pizza.up.railway.app">Yummy!</a>
          </div>
        </div>
 
@@ -276,8 +276,8 @@
           <p lang="pt">Um aplicativo web simples para avaliar os livros que você gosta. Criado com Python, Flask e PostgreSQL.</p>
           <p lang="en" style="display:none;">A simple web app to review the books that you like. Built using Python, Flask and PostgreSQL.</p>
           <!-- Links -->
-          <a lang="pt" class="project-link" href="https://fast-mountain-47414.herokuapp.com/">Visitar</a>
-          <a lang="en" style="display:none;" class="project-link" href="https://fast-mountain-47414.herokuapp.com/">Visit</a>
+          <a lang="pt" class="project-link" href="book-book.up.railway.app">Visitar</a>
+          <a lang="en" style="display:none;" class="project-link" href="book-book.up.railway.app">Visit</a>
 
     </section>
 
